--- a/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
+++ b/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
@@ -1,3 +1,25 @@
 .buttonContainer {
   height: 100%;
 }
+
+.paginationContainer {
+  align-items: flex-end;
+  height: 100%;
+}
+
+.sliderButton {
+  background-color: transparent;
+  height: 100%;
+  border: none;
+  cursor: pointer;
+  padding: 0 28px;
+}
+
+.sliderButton:hover {
+  background: #0EC261;
+  opacity: 0.2;
+}
+
+.dot:active {
+  fill: green!important;
+}
