--- a/src/components/StartPage/StartPageMenu/StartPageMenu.module.scss
+++ b/src/components/StartPage/StartPageMenu/StartPageMenu.module.scss
@@ -1,8 +1,25 @@
 .menu {
-  width: 64px;
+  width: 24px;
   background: #151B1F;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 40px 20px 31px 20px;
 }
 
-.button {
+.menuButton {
   background-color: transparent;
+  border: none;
+}
+
+.langButton {
+  background-color: transparent;
+  border: none;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 15px;
+  color: #0EC261;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
