--- a/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
+++ b/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
@@ -16,10 +16,47 @@
 }
 
 .sliderButton:hover {
-  background: #0EC261;
-  opacity: 0.2;
+  background: rgba(14, 194, 97, 0.2);
 }
 
-.dot:active {
-  fill: green!important;
+.sliderItem {
+  padding: 237px 97px 20px 96px;
+  height: 811px;
+}
+
+.sliderContent {
+  position: relative;
+  h3 {
+    color: #fff;
+    font-size: 40px;
+    margin-bottom: 8px;
+  }
+  p {
+    color: #EEE;
+    font-size: 24px;
+  }
+  button {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #EEEEEE;
+  background: linear-gradient(90deg, #13493F 0%, #0C7B1B 100%);
+  border-radius: 4px;
+  width: 164px;
+  height: 48px;
+  }
+}
+
+.sliderImg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
