--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  max-width: 1440px;
-  margin: 0 auto;
+    width: 100%;
+    margin: 0 auto;
 }
 
 * {
-  outline: none;
+    outline: none;
 }
