--- a/src/components/StartPage/OpenedMenu/OpenedMenu.module.scss
+++ b/src/components/StartPage/OpenedMenu/OpenedMenu.module.scss
@@ -1,46 +1,67 @@
 .openedMenu {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 100;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
+    position: absolute;
+    background: rgba(21, 27, 31, 0.81);
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
 }
 
 .menuContainer {
-  display: flex;
-  padding: 64px 64px 64px 128px;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: calc(50% + 32px);
+    padding-left: 128px;
+    height: 100%;
+    background: #000;
 }
 
 .menu {
-  padding: 0 0 30px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 196px;
-  li {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 37px;
-    color: #FFFFFF;
-    list-style-type: none;
-  }
-  li:hover {
-    color: #0EC261;
-  }
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 44px;
+    li {
+        list-style-type: none;
+        margin-bottom: 15px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        a {
+            font-style: normal;
+            font-weight: 500;
+            font-size: 32px;
+            line-height: 37px;
+            color: #FFFFFF;
+            transition: 0.3s linear;
+            &:hover {
+                color: #0EC261;
+            }
+        }
+    }
 }
 
 .social {
-  display: flex;
-  justify-content: space-between;
-  max-width: 150px;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    li {
+        margin-right: 24px;
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 }
 
-.icon:hover {
-  path {
-    fill: #0EC261
-  }
+.icon {
+    transition: 0.3s linear;
+    fill: #fff;
+    &:hover {
+        fill: #0EC261
+    }
 }
