--- a/src/components/StartPage/StartPageMenu/StartPageMenu.module.scss
+++ b/src/components/StartPage/StartPageMenu/StartPageMenu.module.scss
@@ -1,26 +1,26 @@
 .menu {
-  width: 24px;
-  background: #151B1F;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 40px 20px 31px 20px;
+    width: 64px;
+    background: #151B1F;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 0 32px 0;
 }
 
 .menuButton {
-  background-color: transparent;
-  border: none;
-  z-index: 100;
+    background-color: transparent;
+    border: none;
+    z-index: 100;
 }
 
 .langButton {
-  background-color: transparent;
-  border: none;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 13px;
-  line-height: 15px;
-  color: #0EC261;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: transparent;
+    border: none;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 15px;
+    color: #0EC261;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
