--- a/src/index.scss
+++ b/src/index.scss
@@ -1,59 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: 'Roboto', sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+button,
+a {
+    cursor: pointer;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .paging-item.active button svg {
-  fill: green;
-}
-
-.slider-control-bottomcenter {
-  position: absolute;
-  bottom: 45px;
-  left: 50%;
-  transform: translateX(-50%);
-
-  ul {
-      position: relative;
-      top: -10px;
-      display: flex;
-      margin: 0px;
-      padding: 0px;
-      list-style-type: none;
-
-      li {
-          button {
-              width: 20px;
-              height: 20px;
-              cursor: pointer;
-              opacity: 1;
-              background: transparent;
-              border: none;
-              fill: white;
-              svg {
-                width: 8px;
-                height: 8px;
-              }
-          }
-      }
-  }
-
-  .active {
-      button {
-          fill: #0EC261 !important;
-      }
-  }
+    fill: green;
 }
 
 .slider {
-  height: 811px!important;
+    width: calc(50% - 32px)!important;
+}
+
+.slider-list,
+.slider-slide {
+    height: 100% !important;
+}
+
+.slider-control-bottomcenter {
+    position: absolute;
+    bottom: 18px;
+    left: 50%;
+    transform: translateX(-50%);
+    ul {
+        position: relative;
+        top: -10px;
+        display: flex;
+        margin: 0px;
+        padding: 0px;
+        list-style-type: none;
+        li {
+            button {
+                width: 16px;
+                height: 16px;
+                cursor: pointer;
+                opacity: 1;
+                background: transparent;
+                border: none;
+                fill: white;
+                svg {
+                    width: 8px;
+                    height: 8px;
+                }
+            }
+        }
+    }
+    .active {
+        button {
+            fill: #0EC261 !important;
+        }
+    }
 }
