--- a/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
+++ b/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
@@ -13,9 +13,6 @@
     border: none;
     cursor: pointer;
     padding: 0 28px;
-}
-
-.sliderButton {
     transition: 0.3s linear;
     &:hover {
         background: rgba(14, 194, 97, 0.2);
@@ -23,7 +20,7 @@
 }
 
 .sliderItem {
-    padding: 236px 40px 20px 96px;
+    padding: 236px 96px 20px 96px;
 }
 
 .sliderContent {
@@ -66,4 +63,21 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+@media (max-width: 1024px) {
+  .sliderItem {
+    padding: 277px 64px 20px 64px;
+  }
+  .sliderButton {
+    padding: 0 12px;
+  }
+  .sliderContent {
+    h3 {
+      font-size: 32px;
+    }
+    p {
+      font-size: 22px;
+    }
+  }
 }
