--- a/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
+++ b/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
@@ -56,13 +56,26 @@
     }
 }
 
-.sliderImg {
-    position: absolute;
-    left: 0;
-    top: 0;
+.wrapImg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    }
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
 }
 
 @media (max-width: 1024px) {
