--- a/src/components/OrderPage/OrderPageNav/OrderPageNav.module.scss
+++ b/src/components/OrderPage/OrderPageNav/OrderPageNav.module.scss
@@ -3,7 +3,7 @@
   padding: 8px 64px ;
   display: flex;
   border-top: 1px solid #EEEEEE;
-  border-bottom: 1px solid #EEEEEE;;
+  border-bottom: 1px solid #EEEEEE;
   li {
       list-style-type: none;
       position: relative;
