--- a/src/components/StartPage/StartPageMenu/StartPageMenu.module.scss
+++ b/src/components/StartPage/StartPageMenu/StartPageMenu.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 30px 20px 32px 20px;
+    padding: 30px 20px 15px 20px;
     position: relative;
 }
 
@@ -16,14 +16,25 @@
 }
 
 .langButton {
-    background-color: transparent;
-    border: none;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 13px;
-    line-height: 15px;
+  background-color: transparent;
+  border: none;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 13px;
+  line-height: 15px;
+  color: #0EC261;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  &:hover {
+    border: 1px solid #EEEEEE;
+    color: #EEEEEE;
+  }
+  &:active {
+    border: 1px solid #EEEEEE;
     color: #0EC261;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 }
 
 @media (max-width: 900px) {
