--- a/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
+++ b/src/components/StartPage/StartPageSlider/StartPageSlider.module.scss
@@ -95,17 +95,41 @@
 }
 
 .green {
-  background: linear-gradient(90deg, #13493F 0%, #0C7B1B 100%);
+  background: linear-gradient(90deg, hsla(169, 59%, 18%, 1) 0%, hsla(128, 82%, 26%, 1) 100%);
+  &:hover {
+    background: linear-gradient(90deg, hsla(148, 87%, 8%, 1) 2.61%, hsla(158, 96%, 16%, 1) 112.6%);
+  }
+  &:active {
+    background: linear-gradient(90deg, hsla(148, 87%, -2%, 1) 2.61%, hsla(158, 96%, 6%, 1) 112.6%);
+  }
 }
 
 .blue {
-  background: linear-gradient(90deg, #132949 0%, #0C7B67 100%)
+  background: linear-gradient(90deg, hsla(216, 59%, 18%, 1) 0%, hsla(169, 82%, 26%, 1) 100%);
+  &:hover {
+    background: linear-gradient(90deg, hsla(216, 59%, 8%, 1) 0%, hsla(169, 82%, 16%, 1) 100%);
+  }
+  &:active {
+    background: linear-gradient(90deg, hsla(216, 59%, -2%, 1) 0%, hsla(169, 82%, 6%, 1) 100%);
+  }
 }
 
 .red {
-  background: linear-gradient(90deg, #493013 0%, #7B0C3B 100%);
+  background: linear-gradient(90deg, hsla(32, 59%, 18%, 1) 0%, hsla(335, 82%, 26%, 1) 100%);
+  &:hover {
+    background: linear-gradient(90deg, hsla(32, 59%, 8%, 1) 0%, hsla(335, 82%, 16%, 1) 100%);
+  }
+  &:active {
+    background: linear-gradient(90deg, hsla(32, 59%, -2%, 1) 0%, hsla(335, 82%, 6%, 1) 100%);
+  }
 }
 
 .purple {
-  background: linear-gradient(90deg, #281349 0%, #720C7B 100%);
+  background: linear-gradient(90deg, hsla(263, 59%, 18%, 1) 0%, hsla(295, 82%, 26%, 1) 100%);
+  &:hover {
+    background: linear-gradient(90deg, hsla(263, 59%, 8%, 1) 0%, hsla(295, 82%, 16%, 1) 100%);
+  }
+  &:active {
+    background: linear-gradient(90deg, hsla(263, 59%, -2%, 1) 0%, hsla(295, 82%, 6%, 1) 100%);
+  }
 }
