--- a/src/components/OrderPage/OrderPage.module.scss
+++ b/src/components/OrderPage/OrderPage.module.scss
@@ -84,7 +84,7 @@
 }
 
 .chooseModelButton {
-  background: linear-gradient(90deg, #0EC261 2.61%, #039F67 112.6%);
+  background: linear-gradient(90deg, hsla(148, 87%, 41%, 1) 2.61%, hsla(158, 96%, 32%, 1) 112.6%);
   background-blend-mode: darken;
   border-radius: 8px;
   border: none;
@@ -98,5 +98,11 @@
   &:disabled {
     background: #EEEEEE;
     cursor: default;
+  }
+  &:hover {
+    background: linear-gradient(90deg, hsla(148, 87%, 31%, 1) 2.61%, hsla(158, 96%, 22%, 1) 112.6%);
+  }
+  &:active {
+    background: linear-gradient(90deg, hsla(148, 87%, 21%, 1) 2.61%, hsla(158, 96%, 12%, 1) 112.6%);
   }
 }
