--- a/src/components/OrderPage/OrderPage.module.scss
+++ b/src/components/OrderPage/OrderPage.module.scss
@@ -62,7 +62,7 @@
     overflow: hidden;
     margin-right: 11px;
     &:after {
-        content: '..................................................';
+        content: '...............................................................................................';
         display: block;
         white-space: nowrap;
         overflow: hidden;
