some fix additional stage

--- a/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
+++ b/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
@@ -2,3 +2,13 @@
   display: flex;
   flex-direction: column;
 }
+
+.rates {
+  display: flex;
+  flex-direction: column;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+}
