--- a/src/components/OrderPage/OrderStatus/OrderStatus.module.scss
+++ b/src/components/OrderPage/OrderStatus/OrderStatus.module.scss
@@ -1,87 +1,110 @@
 .orderStatus {
-  padding: 32px 64px 32px 32px;
-  width: 30%;
+    padding: 32px 64px 32px 32px;
+    width: 30%;
 }
 
 .yourOrder {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: right;
-  color: #121212;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: right;
+    color: #121212;
 }
 
 .yourOrderContainer {
-  margin-bottom: 26px;
-  display: flex;
-  justify-content: flex-end;
+    margin-bottom: 26px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .orderPoint {
-  display: flex;
-  align-items: flex-end;
-  margin-bottom: 32px;
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 32px;
 }
 
 .pointTitle {
-  margin-right: 12px;
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 16px;
-  color: #121212;
-  white-space: nowrap;
+    margin-right: 12px;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #121212;
+    white-space: nowrap;
 }
 
 .dots {
-  flex: 1;
-  overflow: hidden;
-  margin-right: 11px;
-  &:after {
-      content: '...............................................................................................';
-      display: block;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 100%;
-      max-width: 100%;
-      color: #999999;
-      font-size: 15px;
-  }
+    flex: 1;
+    overflow: hidden;
+    margin-right: 11px;
+    &:after {
+        content: '..............................................................................................................................................................................................';
+        display: block;
+        white-space: nowrap;
+        overflow: hidden;
+        width: 100%;
+        max-width: 100%;
+        color: #999999;
+        font-size: 15px;
+    }
 }
 
 .point {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-  span {
-      font-weight: 300;
-      font-size: 14px;
-      line-height: 16px;
-      color: #999999;
-  }
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    span {
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 16px;
+        color: #999999;
+        text-align: right;
+    }
 }
 
 .chooseModelButton {
-  background: linear-gradient(90deg, hsla(148, 87%, 41%, 1) 2.61%, hsla(158, 96%, 32%, 1) 112.6%);
-  background-blend-mode: darken;
-  border-radius: 8px;
-  border: none;
-  width: 100%;
-  padding: 15px 5px;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 21px;
-  text-align: center;
-  color: #FFFFFF;
-  &:disabled {
-      background: #EEEEEE;
-      cursor: default;
-      pointer-events: none;
-  }
-  &:hover {
-      background: linear-gradient(90deg, hsla(148, 87%, 31%, 1) 2.61%, hsla(158, 96%, 22%, 1) 112.6%);
-  }
-  &:active {
-      background: linear-gradient(90deg, hsla(148, 87%, 21%, 1) 2.61%, hsla(158, 96%, 12%, 1) 112.6%);
-  }
+    background: linear-gradient(90deg, hsla(148, 87%, 41%, 1) 2.61%, hsla(158, 96%, 32%, 1) 112.6%);
+    background-blend-mode: darken;
+    border-radius: 8px;
+    border: none;
+    width: 100%;
+    padding: 15px 5px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+    &:disabled {
+        background: #EEEEEE;
+        cursor: default;
+        pointer-events: none;
+    }
+    &:hover {
+        background: linear-gradient(90deg, hsla(148, 87%, 31%, 1) 2.61%, hsla(158, 96%, 22%, 1) 112.6%);
+    }
+    &:active {
+        background: linear-gradient(90deg, hsla(148, 87%, 21%, 1) 2.61%, hsla(158, 96%, 12%, 1) 112.6%);
+    }
+}
+
+@media (max-width: 1280px) {}
+
+@media (max-width: 1024px) {
+    .orderStatus {
+        width: calc(100% - 86px);
+        position: fixed;
+        bottom: 0;
+        background: #fff;
+        z-index: 1;
+        border-top: 1px solid #000;
+        right: 0;
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 628px) {
+    .orderStatus {
+        width: 100%;
+        padding: 12px;
+    }
 }
