--- a/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
+++ b/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
@@ -1,14 +1,166 @@
-.dates {
-  display: flex;
-  flex-direction: column;
+.additionalItem {
+    margin-bottom: 22px;
+    display: flex;
+    flex-direction: column;
 }
 
-.rates {
-  display: flex;
-  flex-direction: column;
+.additionalTitle {
+    display: block;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #121212;
+    margin-bottom: 16px;
 }
 
-.options {
-  display: flex;
-  flex-direction: column;
+.radio {
+    input {
+        display: none;
+    }
+    label {
+        display: block;
+        font-size: 14px;
+        position: relative;
+        cursor: pointer;
+        color: #999999;
+        text-transform: capitalize;
+    }
+    input[type="radio"]:checked+label,
+    input[type="radio"]:checked+label::before {
+        border-color: #0EC261;
+        border-width: 3px;
+        color: #121212;
+    }
+    label::before {
+        content: "";
+        width: 12px;
+        height: 12px;
+        border: 1px solid #999999;
+        border-radius: 50%;
+        position: absolute;
+        left: -20px;
+        box-sizing: border-box;
+        top: 50%;
+        transform: translate(0, -50%);
+    }
+}
+
+.colorsContainer {
+    display: flex;
+    padding-left: 20px;
+}
+
+.colorWrapper {
+    margin-right: 36px;
+}
+
+.dateTitle {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    color: #121212;
+    text-align: right;
+    width: 18px;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.wrapdate {
+    margin-bottom: 10px;
+}
+
+.datePicker {
+    input {
+        border: 0;
+        border-bottom: 1px solid #999999;
+    }
+}
+
+.clearButton {
+    width: 25px;
+    height: 20px;
+    position: absolute;
+    right: 0;
+    padding: 0;
+    &::before {
+        content: "";
+        height: 10px;
+        width: 1px;
+        top: 4px;
+        right: 12px;
+        background-color: black;
+        transform: rotate( 45deg);
+        position: absolute;
+    }
+    &::after {
+        content: "";
+        height: 10px;
+        width: 1px;
+        background-color: black;
+        transform: rotate( 135deg);
+        position: absolute;
+        border-radius: 0;
+        padding: 0;
+        display: block;
+        left: 12px;
+        top: 4px;
+    }
+}
+
+.qqqoptions {
+    label {
+        color: #999999;
+        font-weight: 300;
+        font-size: 14px;
+    }
+    [type="checkbox"]:not(:checked),
+    [type="checkbox"]:checked {
+        position: absolute;
+        left: -9999px;
+    }
+    [type="checkbox"]:not(:checked)+label,
+    [type="checkbox"]:checked+label {
+        position: relative;
+        padding-left: 20px;
+        cursor: pointer;
+    }
+    [type="checkbox"]:not(:checked)+label:before,
+    [type="checkbox"]:checked+label:before {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translate(0, -50%);
+        width: 12px;
+        height: 12px;
+        background: transparent;
+        outline: none;
+        border: 1px solid #999999;
+    }
+    [type="checkbox"]:checked+label:before {
+        border: 1px solid #0EC261;
+    }
+    [type="checkbox"]:checked+label {
+        color: #121212;
+    }
+    [type="checkbox"]:not(:checked)+label:after,
+    [type="checkbox"]:checked+label:after {
+        content: "✔";
+        position: absolute;
+        top: -3px;
+        left: 3px;
+        font-size: 16px;
+    }
+    [type="checkbox"]:not(:checked)+label:after {
+        opacity: 0;
+        transform: scale(0);
+    }
+    [type="checkbox"]:checked+label:after {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.wrapperchecedprice {
+    margin-bottom: 4px;
 }
