--- a/src/components/OrderPage/MapStage/OrderPageMap/OrderPageMap.module.scss
+++ b/src/components/OrderPage/MapStage/OrderPageMap/OrderPageMap.module.scss
@@ -1,6 +1,14 @@
-.marker {
-  height: 20px;
-  width: 20px;
-  background-color: red;
-  border-radius: 50%;
+.map {
+    height: 368px;
+    width: 736px;
 }
+
+@media (max-width: 1280px) {
+    .map {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1024px) {}
+
+@media (max-width: 628px) {}
