--- a/src/components/OrderPage/OrderPage.module.scss
+++ b/src/components/OrderPage/OrderPage.module.scss
@@ -22,3 +22,24 @@
     height: 100%;
     min-height: calc(100vh - 136px);
 }
+
+@media (max-width: 1280px) {}
+
+@media (max-width: 1024px) {
+    .orderWrap {
+        flex-direction: column;
+    }
+    .leftContainer {
+        border: 0;
+        width: 100%;
+    }
+    .orderMainContainer {
+        width: calc(100% - 86px);
+    }
+}
+
+@media (max-width: 628px) {
+    .orderMainContainer {
+        width: 100%;
+    }
+}
