--- a/src/components/StartPage/StartPageMain/StartPageMain.module.scss
+++ b/src/components/StartPage/StartPageMain/StartPageMain.module.scss
@@ -81,10 +81,10 @@
     width: 250px;
     padding: 14px 5px;
     &:hover {
-      background: linear-gradient(90deg, darken(#0EC261, 10%) 2.61%, darken(#039F67, 10%) 112.6%);
+        background: linear-gradient(90deg, darken(#0EC261, 10%) 2.61%, darken(#039F67, 10%) 112.6%);
     }
     &:active {
-      background: linear-gradient(90deg, darken(#0EC261, 20%) 2.61%, darken(#039F67, 20%) 112.6%);
+        background: linear-gradient(90deg, darken(#0EC261, 20%) 2.61%, darken(#039F67, 20%) 112.6%);
     }
 }
 
@@ -112,65 +112,65 @@
 }
 
 @media (max-width: 1280px) {
-  .main {
-    width: calc(60% - 32px);
-    padding: 32px 32px 38px 32px;
-  }
+    .main {
+        width: calc(60% - 32px);
+        padding: 32px 32px 38px 32px;
+    }
 }
 
-
 @media (max-width: 1024px) {
-  .main {
-    width: 100%;
-  }
+    .main {
+        width: 100%;
+    }
 }
 
 @media (max-width: 628px) {
-  .main {
-    width: 100%;
-    padding: 0;
-  }
-  .header {
-    flex-direction: column;
-    align-items: flex-end;
-    margin-bottom: 34px;
-    padding: 16px;
-  }
-  .articles {
-    margin-bottom: 16px;
-    padding: 0 16px;
-  }
-  .firstArticle {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 32px;
-    line-height: 100%;
-  }
-  .sloganContainer {
-    margin-bottom: 32px;
-    padding: 0 16px;
-  }
-  .slogan {
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18x;
-    line-height: 21px;
-    color: #999999;
-  }
-  .rentButton {
-    width: 100%;
-  }
-  .footer {
-    flex-direction: column-reverse;
-    align-items: flex-end;
-    background-color: #000;
-    padding: 16px;
-  }
-  .copyright {
-    color: #0EC261;
-  }
-  .phone {
-    color: #eee;
-    margin-bottom: 8px;
-  }
+    .main {
+        width: 100%;
+        padding: 0;
+    }
+    .header {
+        flex-direction: column;
+        align-items: flex-end;
+        margin-bottom: 34px;
+        padding: 16px;
+    }
+    .articles {
+        margin-bottom: 16px;
+        padding: 0 16px;
+    }
+    .firstArticle {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 32px;
+        line-height: 100%;
+    }
+    .sloganContainer {
+        margin-bottom: 32px;
+        padding: 0 16px;
+    }
+    .slogan {
+        font-style: normal;
+        font-weight: 300;
+        font-size: 18x;
+        line-height: 21px;
+        color: #999999;
+    }
+    .rentButton {
+        width: 100%;
+        border-radius: 0;
+    }
+    .footer {
+        flex-direction: column-reverse;
+        align-items: flex-end;
+        background-color: #000;
+        padding: 16px;
+    }
+    .copyright {
+        color: #0EC261;
+    }
+    .phone {
+        color: #eee;
+        margin-bottom: 8px;
+    }
 }
