--- a/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
+++ b/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
@@ -39,9 +39,8 @@
         border-radius: 50%;
         position: absolute;
         left: -20px;
+        top: 2px;
         box-sizing: border-box;
-        top: 50%;
-        transform: translate(0, -50%);
     }
 }
 
@@ -50,8 +49,18 @@
     padding-left: 20px;
 }
 
+.ratesContainer {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+}
+
 .colorWrapper {
     margin-right: 36px;
+}
+
+.raterWrapper {
+  margin-bottom: 8px;
 }
 
 .dateTitle {
@@ -107,7 +116,7 @@
     }
 }
 
-.qqqoptions {
+.options {
     label {
         color: #999999;
         font-weight: 300;
