--- a/src/components/OrderPage/OrderStatus/OrderStatus.module.scss
+++ b/src/components/OrderPage/OrderStatus/OrderStatus.module.scss
@@ -17,6 +17,10 @@
     justify-content: flex-end;
 }
 
+.totalPriceContainer {
+  margin-bottom: 32px;
+}
+
 .orderPoint {
     display: flex;
     align-items: flex-end;
