--- a/src/components/OrderPage/ChoosingCarStage/ChoosingCarStage.module.scss
+++ b/src/components/OrderPage/ChoosingCarStage/ChoosingCarStage.module.scss
@@ -3,3 +3,48 @@
   max-width: 736px;
   flex-wrap: wrap;
 }
+
+.categoryWrapper {
+  margin-right: 36px;
+}
+
+.radio {
+  display: flex;
+  padding-left: 20px;
+  margin-bottom: 48px;
+  input {
+      display: none;
+  }
+  label {
+      display: block;
+      font-size: 14px;
+      position: relative;
+      cursor: pointer;
+      color: #999999;
+      text-transform: capitalize;
+  }
+  input[type="radio"]:checked+label,
+  input[type="radio"]:checked+label::before {
+      border-color: #0EC261;
+      border-width: 3px;
+      color: #121212;
+  }
+  label::before {
+      content: "";
+      width: 12px;
+      height: 12px;
+      border: 1px solid #999999;
+      border-radius: 50%;
+      position: absolute;
+      left: -20px;
+      top: 2px;
+      box-sizing: border-box;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .categories {
+    flex-direction: column;
+  }
+}
