--- a/src/components/OrderPage/OrderPageHeader/OrderPageHeader.module.scss
+++ b/src/components/OrderPage/OrderPageHeader/OrderPageHeader.module.scss
@@ -27,3 +27,10 @@
     line-height: 16px;
     color: #999999;
 }
+
+@media (max-width: 628px) {
+  .header {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
