--- a/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
+++ b/src/components/OrderPage/AdditionalStage/AdditionalStage.module.scss
@@ -18,7 +18,7 @@
         display: none;
     }
     label {
-        display: block;
+        display: inline-block;
         font-size: 14px;
         position: relative;
         cursor: pointer;
@@ -118,6 +118,7 @@
 
 .options {
     label {
+        display: inline-block;
         color: #999999;
         font-weight: 300;
         font-size: 14px;
