--- a/src/components/OrderPage/FinalStage/FinalStage.module.scss
+++ b/src/components/OrderPage/FinalStage/FinalStage.module.scss
@@ -30,6 +30,7 @@
 }
 
 .carNumber {
+  align-self: flex-start;
   font-size: 14px;
   line-height: 16px;
   color: #121212;
@@ -53,4 +54,13 @@
 
 .optionContaner {
   margin-bottom: 8px;
+}
+
+.confirm {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 28px;
+  color: #121212;
+  margin-bottom: 16px;
 }
