--- a/src/components/OrderPage/OrderStatus/OrderStatus.module.scss
+++ b/src/components/OrderPage/OrderStatus/OrderStatus.module.scss
@@ -95,6 +95,16 @@
     }
 }
 
+.cancelButton {
+  background: linear-gradient(90deg, #493013 0%, #7B0C3B 100%);
+  &:hover {
+    background: linear-gradient(90deg, darken(#493013, 5%) 0%, darken(#7B0C3B, 5%) 100%);
+  }
+  &:active {
+    background: linear-gradient(90deg, darken(#493013, 10%) 0%, darken(#7B0C3B, 10%) 100%);
+  }
+}
+
 .detailsButton {
   display: none;   
   background: linear-gradient(90deg, hsla(148, 87%, 41%, 1) 2.61%, hsla(158, 96%, 32%, 1) 112.6%);
@@ -141,6 +151,9 @@
     }
     .detailsButton {
       display: block;
+    }
+    .orderPoint {
+      margin-bottom: 16px;
     }
 }
 
