--- a/src/components/OrderPage/OrderPage.module.scss
+++ b/src/components/OrderPage/OrderPage.module.scss
@@ -43,6 +43,7 @@
         width: 100%;
     }
     .leftContainer {
-      padding: 16px;
+        padding: 16px;
+        padding-bottom: 130px;
     }
 }
