--- a/src/components/OrderPage/ChoosingCarStage/ChoosingCarStage.module.scss
+++ b/src/components/OrderPage/ChoosingCarStage/ChoosingCarStage.module.scss
@@ -1,74 +1,78 @@
 .carsContainer {
-  display: flex;
-  max-width: 736px;
-  flex-wrap: wrap;
-  height: 70vh;
-  overflow: auto;
-  &::-webkit-scrollbar {
-    width: 16px;
-    background-color: #FFF;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #0EC261;
-  }
-
+    display: flex;
+    max-width: 736px;
+    flex-wrap: wrap;
+    height: 70vh;
+    overflow: auto;
+    &::-webkit-scrollbar {
+        width: 16px;
+        background-color: #FFF;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #0EC261;
+    }
 }
 
 .categoryWrapper {
-  margin-right: 36px;
-  white-space: nowrap;
-  margin-bottom: 8px;
+    margin-right: 36px;
+    white-space: nowrap;
+    margin-bottom: 8px;
 }
 
 .radio {
-  display: flex;
-  padding-left: 20px;
-  margin-bottom: 48px;
-  flex-wrap: wrap;
-  input {
-      display: none;
-  }
-  label {
-      display: block;
-      font-size: 14px;
-      position: relative;
-      cursor: pointer;
-      color: #999999;
-      text-transform: capitalize;
-  }
-  input[type="radio"]:checked+label,
-  input[type="radio"]:checked+label::before {
-      border-color: #0EC261;
-      border-width: 3px;
-      color: #121212;
-  }
-  label::before {
-      content: "";
-      width: 12px;
-      height: 12px;
-      border: 1px solid #999999;
-      border-radius: 50%;
-      position: absolute;
-      left: -20px;
-      top: 2px;
-      box-sizing: border-box;
-  }
+    display: flex;
+    padding-left: 20px;
+    margin-bottom: 48px;
+    flex-wrap: wrap;
+    input {
+        display: none;
+    }
+    label {
+        display: block;
+        font-size: 14px;
+        position: relative;
+        cursor: pointer;
+        color: #999999;
+        text-transform: capitalize;
+    }
+    input[type="radio"]:checked+label,
+    input[type="radio"]:checked+label::before {
+        border-color: #0EC261;
+        border-width: 3px;
+        color: #121212;
+    }
+    label::before {
+        content: "";
+        width: 12px;
+        height: 12px;
+        border: 1px solid #999999;
+        border-radius: 50%;
+        position: absolute;
+        left: -20px;
+        top: 2px;
+        box-sizing: border-box;
+    }
 }
 
 @media (max-width: 1024px) {
-  .carsContainer {
-    height: 50vh;
-  }
+    .carsContainer {
+        height: 50vh;
+    }
 }
 
 @media (max-width: 768px) {
-  .categories {
-    flex-direction: column;
-  }
-  .carsContainer {
-    flex-direction: column;
-    flex-wrap: nowrap;
-    height: 45vh;
-  }
+    .categories {
+        flex-direction: column;
+    }
+    .carsContainer {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        height: 45vh;
+    }
+}
+
+@media (max-width: 628px) {
+    .radio {
+        margin-bottom: 16px;
+    }
 }
