--- a/src/components/OrderPage/OrderPage.module.scss
+++ b/src/components/OrderPage/OrderPage.module.scss
@@ -20,7 +20,6 @@
 .orderWrap {
     display: flex;
     height: 100%;
-    min-height: calc(100vh - 136px);
 }
 
 @media (max-width: 1280px) {}
@@ -32,6 +31,7 @@
     .leftContainer {
         border: 0;
         width: 100%;
+        padding: 32px 64px 100px 64px;
     }
     .orderMainContainer {
         width: calc(100% - 86px);
@@ -44,6 +44,6 @@
     }
     .leftContainer {
         padding: 16px;
-        padding-bottom: 130px;
+        padding-bottom: 120px;
     }
 }
