--- a/src/components/StartPage/StartPageMain/StartPageMain.module.scss
+++ b/src/components/StartPage/StartPageMain/StartPageMain.module.scss
@@ -114,13 +114,14 @@
 @media (max-width: 1280px) {
     .main {
         width: calc(60% - 32px);
-        padding: 32px 32px 38px 32px;
+        padding: 32px 32px 32px 32px;
     }
 }
 
 @media (max-width: 1024px) {
     .main {
         width: 100%;
+        padding-bottom: 38px;
     }
 }
 
