--- a/src/components/OrderPage/MapStage/OrderPageMap/Marker/Marker.module.scss
+++ b/src/components/OrderPage/MapStage/OrderPageMap/Marker/Marker.module.scss
@@ -2,7 +2,7 @@
   width: 30px;
   height: 30px;
   border-radius: 50% 50% 50% 0;
-  background: #00cae9;
+  background: #0EC261!important;
   position: absolute;
   transform: rotate(-45deg);
   left: 50%;
@@ -47,7 +47,7 @@
   animation: pulsate 1s ease-out;
   animation-iteration-count: infinite;
   opacity: 0;
-  box-shadow: 0 0 1px 2px #00cae9;
+  box-shadow: 0 0 1px 2px #0EC261;
   animation-delay: 1.1s;
 }
 
