fix car image with errors

--- a/src/components/OrderPage/ChoosingCarStage/Car/Car.module.scss
+++ b/src/components/OrderPage/ChoosingCarStage/Car/Car.module.scss
@@ -33,9 +33,7 @@
 .carImage {
   width: 256px;
   height: 110px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: right;
+  object-fit: contain;
 }
 
 .info {
